# academic-research

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.orchestrator/: README.md  config.yaml  infra-brief.md  status.yaml
.orchestrator/improved-tickets/: 65.original.md  67.original.md  70.original.md  76.original.md
academic_vault/: db.py  embeddings.py  material-passport.schema.json  material_passport.py  migrate.py  requirements.txt  retrieval.py  schema.sql  server.py
agents/: api_searcher.md  auth-helper.md  auth_helper_lib.py  book-fetcher.md  browser-searcher.md  browser_searcher.md  coordinator.md  degruyter.md  doabooks-fetcher.md  ebook-central.md  figure-verifier.md  generic-fetcher.md  kvk-fetcher.md  meta-analysis.md  nationallizenzen.md  oapen-fetcher.md  quality-reviewer.md  query-generator.md  query_generator.md  quote-extractor.md  quote_extractor.md  relevance-scorer.md  relevance_scorer.md  review-writer.md  review_writer.md  risk-of-bias.md  scihub-fetcher.md  springer-book.md  tib-fetcher.md
commands/: cite.md  context.md  excel.md  fetch.md  history.md  humanize.md  latex.md  pickup.md  recommend.md  review.md  score.md  search-pdfs.md  search.md  setup.md
config/: research_modes.yaml  scoring.yaml  search_modules.yaml
config/browser_guides/: degruyter.md  destatis.md  doab.md  ebook-central.md  ebscohost.md  google_scholar.md  han_login.md  kvk.md  nationallizenzen.md  oapen.md  oecd.md  opac.md  proquest.md  repec.md  springer.md  tib.md
config/library-profiles/: _schema.json  eth-zurich.yaml  fu-berlin.yaml  tum.yaml  uni-hamburg.yaml  uni-wien.yaml
docs/: ARCHITECTURE.md  AUDIT-v6-roadmap.md  AUDIT-v6-vault.md  MIGRATION-v5-to-v6.md  SKIP_REASONS.md  adding-browser-modules.md  command-reference.md  literature-state-schema.md  setup-guide.md
docs/audit/: 2026-06-03-board-audit.md
docs/evals/: 2026-04-23-summary.md  README.md  TEMPLATE.md  v6.2-tier-eval.md
docs/skills/: notebook-bundle.md
evals/: SCHEMA.md
evals/abstract-generator/: evals.json  trigger_evals.json
evals/academic-context/: evals.json  trigger_evals.json
evals/advisor/: evals.json  trigger_evals.json
evals/auto-download/: sources.yaml
evals/book-handler/: evals.json  trigger_evals.json
evals/chapter-writer/: evals.json  trigger_evals.json
evals/citation-extraction/: evals.json  trigger_evals.json
evals/citation-style-import/: evals.json  trigger_evals.json
evals/cluster-visualizer/: evals.json  trigger_evals.json
evals/conference-poster/: evals.json  trigger_evals.json
evals/fetch/: evals.json
evals/figure-verifier/: evals.json
evals/grant-proposal/: evals.json  trigger_evals.json
evals/humanizer-de/: evals.json  trigger_evals.json
evals/humanizer-de-pipeline/: README.md  template-comparison.md
evals/latex-export/: evals.json  trigger_evals.json
evals/literature-gap-analysis/: evals.json  trigger_evals.json
evals/material-passport/: evals.json  trigger_evals.json
evals/methodology-advisor/: evals.json  trigger_evals.json
evals/notebook-bundle/: evals.json  trigger_evals.json
evals/oa-fetchers/: evals.json
evals/plagiarism-check/: evals.json  trigger_evals.json
evals/prisma-flow/: evals.json  trigger_evals.json
evals/publisher-fetchers/: evals.json
evals/quality-reviewer/: evals.json
evals/query-generator/: evals.json
evals/quote-extractor/: evals.json
evals/reading-list-import/: evals.json  trigger_evals.json
evals/research-question-refiner/: evals.json  trigger_evals.json
evals/reviewer-response/: evals.json  trigger_evals.json
evals/source-quality-audit/: evals.json  trigger_evals.json
evals/style-evaluator/: evals.json  trigger_evals.json
evals/submission-checker/: evals.json  trigger_evals.json
evals/title-generator/: evals.json  trigger_evals.json
evals/topic-brainstorm/: evals.json  trigger_evals.json
evals/verbatim-guard/: README.md  cases.json  runner.py
evals/zotero-import/: evals.json  (+1 more)
hooks/: hooks.json  mid-session-reinforcement.mjs  onboard-project-uni-prompt.sh  post-tool-use-decisions.mjs  pre-compact.mjs  verbatim-guard.mjs
library-profiles/: active.yaml.template
scripts/: __init__.py  auth_helper_lib.py  barcode_utils.py  batch_api.py  book_resolve.py  chunk_pdf.py  citation_manager.py  citations.py  configure_permissions.py  dedup.py  deduplicator.py  excel.py  export-literature-state.mjs  export-literature-state.sh  export.py  files_api_helper.py  fulltext_index.py  meta_analysis.py  ocr.py  page_offset.py  pdf.py  pdf_resolver.py  project_bootstrap.py  ranking.py  requirements.txt  scihub_optin.py  search.py  search_apis.py  setup.sh  smoke.py  style_analysis.py  text_utils.py
templates/: literature_review.md  research_report.md
tests/: _capture_skill_sizes.py  conftest.py  test_auth_helper.py  test_batch_api.py  test_book_fetcher.py  test_book_resolve.py  test_chapter_writer_headings.py  test_chunk_pdf.py  test_citation_book_chapter.py  test_citation_styles_v6_4.py  test_cluster_visualizer.py  test_conference_poster.py  test_cross_references.py  test_csl_import.py  test_dedup.py  test_excel.py  test_export_literature_state_injection.py  test_fetch_command.py  test_figure_verifier.py  test_files_api_helper.py  test_generic_fetcher.py  test_grant_proposal.py  test_history_restore.py  test_hook_decisions_log.py  test_hook_midsession.py  test_hook_snapshot.py  test_humanize_command.py  test_humanizer_de_vendored.py  test_issue_172_command_frontmatter.py  test_issue_173_agents_no_python.py  test_issue_174_readme_badges.py  test_issue_175_skill_orthography.py  test_issue_176_bibtex_trigger.py  test_issue_177_ki_trigger_disambiguation.py  test_issue_178_trigger_conflict.py  test_issue_179_conference_poster_typo.py  test_issue_181_clauderoot_paths.py  test_issue_182_marketplace_metadata.py  test_issue_183_conftest_fixtures.py  test_issue_185_chapter_writer_pd.py  (+82 more)
(+312 files in other folders)
