# pyproject.toml — Tooling-Konfiguration fuer academic-research (Issue #202)
#
# Dieses Plugin ist KEIN installierbares Python-Paket, sondern ein Claude-Code-
# Plugin mit lose gekoppelten Skripten unter scripts/ und academic_vault/.
# pyproject.toml dient hier ausschliesslich als zentrale Tool-Konfiguration
# (pytest, ruff, mypy) — es wird bewusst kein build-system deklariert, damit
# `pip install .` nicht versehentlich ein Paket baut.

[project]
name = "academic-research"
version = "6.6.0"
description = "Modulares akademisches Forschungs-Toolkit (Claude-Code-Plugin)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jonas Ahler", email = "jam@ahler.org" }]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
# WICHTIG (Issue #202): Diese Sektion darf die bestehende Test-Discovery NICHT
# brechen. rootdir bleibt das Repo-Root (Verzeichnis dieser Datei), testpaths
# zeigt auf tests/ — exakt das Verhalten von `pytest tests/`.
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Bewusst KEINE erzwungenen addopts (z.B. --cov / -x): die CI setzt Coverage
# und sonstige Flags weiterhin via CLI. So bleibt die Suite identisch gruen.
filterwarnings = [
    "ignore::DeprecationWarning:PyPDF2",
]

# ---------------------------------------------------------------------------
# ruff — Linter + Formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["scripts", "academic_vault", "tests"]
extend-exclude = [
    "skills/humanizer-de",  # vendored
    "skills/xlsx",          # vendored
    "evals",
]

[tool.ruff.lint]
# Konservatives Default-Set, damit bestehender Code nicht massenhaft bricht:
# E/F = pycodestyle-Errors + pyflakes, I = Import-Sortierung, UP = pyupgrade.
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # Zeilenlaenge — wird vom Formatter gehandhabt
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — statische Typpruefung
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
files = ["scripts", "academic_vault"]
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
# Schrittweise Einfuehrung — vorerst nicht-strikt, damit CI nicht sofort rot ist.
check_untyped_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*", "evals.*"]
ignore_errors = true
